@@ -10,6 +10,10 @@ Legend:
  % Development flag or note, such as branching.
 
 
+Pretty URLs 1.0                                                  ???
+================================================================================
+ ! Base: The relativising code needed some fixes. Sadly <base> can't be used. (PrettyUrls-Filters.php, QueryString.php)
+
 Pretty URLs 1.0RC                                                  19 June, 2009
 ================================================================================
  % Base/reverter: Installs on SMF 2.0 RC1.
